🚀 Major API Enhancement & Production Updates
Key Updates:
- ✅ Enhanced API specifications and production documentation
- ✅ Bloomberg verification breakthrough with comprehensive testing
- ✅ New persistent and production Dockerfiles for multi-environment support
- ✅ Claude Code integration and comprehensive API fixes
- ✅ Excel add-in and Mac bridge implementations
- ✅ Institutional Bloomberg roadmap and verification systems
- ✅ Enhanced deployment scripts for multi-region support
- ✅ Token optimization and performance improvements
- ✅ Comprehensive testing suite and validation frameworks

Production Improvements:
- Enhanced app.yaml configurations for production/persistent modes
- GCS database architecture optimizations
- Multi-region deployment capabilities
- Performance monitoring and geographic analysis
- Excel/Vercel bridge integrations

Files Updated:
- Core API files (google_analysis10.py, google_analysis10_api.py)
- Docker configurations (Dockerfile, Dockerfile.production, Dockerfile.persistent)
- App Engine configs (app.yaml, app.production.yaml, app.persistent.yaml)
- Bond calculation enhancements (bond_master_hierarchy_enhanced.py)
- Comprehensive documentation and API specifications

Ready for production deployment with database fixes needed.

--- a/app.yaml
+++ b/app.yaml
@@ -1,18 +1,39 @@
-runtime: python39
+# Google Analysis 10 - App Engine Configuration
+# Optimized for bond analytics with GCS database architecture
 
-entrypoint: gunicorn --bind :$PORT --workers 1 --timeout 0 main:app
+runtime: python311
+
+# Standard entrypoint for Flask app
+entrypoint: gunicorn --bind :$PORT --workers 1 --threads 2 --timeout 0 google_analysis10_api:app
 
 env_variables:
   PORT: 8080
   ENVIRONMENT: production
-  DATABASE_PATH: ./bonds_data.db
-  VALIDATED_DB_PATH: ./validated_quantlib_bonds.db
+  DATABASE_SOURCE: gcs
+  PYTHONPATH: /srv
 
+# Reasonable scaling for bond analytics workload
 automatic_scaling:
   min_instances: 0
-  max_instances: 10
+  max_instances: 3
+  target_cpu_utilization: 0.6
 
+# Sufficient resources for QuantLib calculations
 resources:
   cpu: 1
   memory_gb: 4
-  disk_size_gb: 10
+
+# Health check
+readiness_check:
+  path: "/health"
+  check_interval_sec: 5
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
+
+liveness_check:
+  path: "/health"
+  check_interval_sec: 30
+  timeout_sec: 4
+  failure_threshold: 4
+  success_threshold: 2
