🎯 Add Production-Ready Google Sheets Functions
✅ NEW: Professional xt_ functions for Google Sheets integration
✅ FIXED: Settlement date handling with robust date parsing
✅ COMPLETE: 11 bond analytics functions + validation tools

Files Added:
- xt_functions.gs (344 lines) - Production Google Sheets functions
- GOOGLE_SHEETS_FUNCTIONS.md (134 lines) - User documentation
- GOOGLE_SHEETS_IMPLEMENTATION_NOTES.md (174 lines) - Technical notes

Updated:
- README.md - Added Google Sheets integration section
- .gitignore - Track new Google Sheets files

Features:
- Settlement date support (multiple date formats)
- Bloomberg validation functions
- Error handling with user-friendly messages
- Backward compatibility maintained
- XTrillion API integration

Usage: =xt_ytm("T 3 15/08/52", 71.66, "2025-08-01")

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ bbg baseline.xlsx
 !deploy*.sh
 !test_enhanced_filters.py
 !implement_ga10_filters.py
+!xt_functions.gs
+!GOOGLE_SHEETS_FUNCTIONS.md
+!GOOGLE_SHEETS_IMPLEMENTATION_NOTES.md
