--- a/app.yaml
+++ b/app.yaml
@@ -1,39 +1,7 @@
-# Google Analysis 10 - App Engine Configuration
-# Optimized for bond analytics with GCS database architecture
-
 runtime: python311
+service: default
+entrypoint: gunicorn --bind :$PORT google_analysis10_api:app
 
-# Standard entrypoint for Flask app
-entrypoint: gunicorn --bind :$PORT --workers 1 --threads 2 --timeout 0 google_analysis10_api:app
-
-env_variables:
-  PORT: 8080
-  ENVIRONMENT: production
-  DATABASE_SOURCE: gcs
-  PYTHONPATH: /srv
-
-# Reasonable scaling for bond analytics workload
 automatic_scaling:
-  min_instances: 0
-  max_instances: 3
-  target_cpu_utilization: 0.6
-
-# Sufficient resources for QuantLib calculations
-resources:
-  cpu: 1
-  memory_gb: 4
-
-# Health check
-readiness_check:
-  path: "/health"
-  check_interval_sec: 5
-  timeout_sec: 4
-  failure_threshold: 2
-  success_threshold: 2
-
-liveness_check:
-  path: "/health"
-  check_interval_sec: 30
-  timeout_sec: 4
-  failure_threshold: 4
-  success_threshold: 2
+  max_instances: 20
+  min_instances: 1
