feat: Fix GitHub Actions workflows and update Treasury yields to 2025-08-14
- Fixed sqlite3 import error (it's built-in to Python)
- Updated all GitHub Actions to latest versions (v4/v5)
- Created simplified Treasury update workflow
- Added optional GCS sync workflow
- Successfully updated Treasury yields to August 14, 2025

--- a/app.development.yaml
+++ b/app.development.yaml
@@ -47,4 +47,4 @@ liveness_check:
   success_threshold: 1
 
 # Note: Include test files in development
-# skip_files removed - use .gcloudignore instead
+# Uses .gcloudignore for file exclusion
