--- a/.github/workflows/update-treasury-yields.yml
+++ b/.github/workflows/update-treasury-yields.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests pandas sqlite3
+        pip install requests pandas
     
     - name: Update Treasury yields
       run: |
