--- a/app.production.yaml
+++ b/app.production.yaml
@@ -44,15 +44,4 @@ liveness_check:
   failure_threshold: 3
   success_threshold: 2
 
-# Skip files that could cause issues
-skip_files:
-- ^(.*/)?#.*#$
-- ^(.*/)?.*~$
-- ^(.*/)?.*\.py[co]$
-- ^(.*/)?.*/RCS/.*$
-- ^(.*/)?\..*$
-- ^(.*/)?.*\.bak$
-- ^(.*/)?test_.*\.py$
-- ^(.*/)?debug_.*\.py$
-- ^(.*/)?archive/.*$
-- ^(.*/)?backups_.*$
+# File exclusion handled by .gcloudignore
