--- a/.github/workflows/update-treasury-yields-simple.yml
+++ b/.github/workflows/update-treasury-yields-simple.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests pandas
+        pip install requests pandas lxml
     
     - name: Update Treasury yields
       run: |
